# imagedecoder.jpeg-turbo

./: CMakeLists.txt
imageencoder.jpeg-turbo/: addon.xml.in
src/: JpegIO.cpp  JpegIO.h
